--- a/contact.css
+++ b/contact.css
@@ -122,8 +122,7 @@ ul {
   right: 0;
   bottom: 0;
   color: #fff;
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
+  background: #0b111f;
 }
 
 .footer img {
@@ -182,8 +181,7 @@ ul {
 
 .nav-color {
   color: #fff;
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
+  background: #0b111f;
 }
 
 .footer {
