--- a/feature.css
+++ b/feature.css
@@ -3,17 +3,14 @@ ul {
 }
 
 body {
-  background-color: #f3f3f3;
+  background: #0b111f;
 }
-
 .footer {
   color: #fff;
   /* position: fixed;
   bottom: 0;
   left: 0;
   right: 0; */
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
 }
 
 .footer img {
@@ -203,8 +200,6 @@ h6 {
 
 .nav-color {
   color: #fff;
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
 }
 
 .nav-link {
@@ -240,8 +235,9 @@ h6 {
 }
 
 .area {
-  background: #4e54c8c5;
-  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+  /* background: #4e54c8c5;
+  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); */
+  background: #0b111f;
   width: 100%;
   height: 100vh;
 }
