--- a/idea.css
+++ b/idea.css
@@ -2,13 +2,7 @@ ul {
   margin: 0;
 }
 body {
-  background-color: #f3f3f3;
-  /* background-image: url("./img/background.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-position: center;
-  background-size: cover;
-  color: #fff !important; */
+  background: #0b111f;
 }
 .footer {
   position: fixed;
@@ -16,9 +10,6 @@ body {
   right: 0;
   bottom: 0;
   color: #fff;
-
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
 }
 
 .footer img {
@@ -77,8 +68,6 @@ body {
 
 .nav-color {
   color: #fff;
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
 }
 .nav-link {
   padding-left: 1.5rem !important;
@@ -126,8 +115,7 @@ p {
 }
 
 .area {
-  background: #4e54c8c5;
-  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+  background: #0b111f;
   width: 100%;
   height: 100vh;
 }
