--- a/thanhvien.css
+++ b/thanhvien.css
@@ -3,8 +3,8 @@ ul {
 }
 .footer {
   color: #fff;
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
+  /* background-color: #7f5a83 !important;
+  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important; */
 }
 
 .footer img {
@@ -197,8 +197,8 @@ body {
 
 .nav-color {
   color: #fff;
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
+  /* background-color: #7f5a83 !important;
+  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important; */
 }
 
 .nav-link {
@@ -227,8 +227,10 @@ body {
 }
 
 .area {
-  background: #4e54c8c5;
-  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+  /* background: #4e54c8; */
+  /* color: #fff !important; */
+  background: #0b111f;
+  /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); */
   width: 100%;
   height: 100vh;
 }
