--- a/thongke.css
+++ b/thongke.css
@@ -2,7 +2,7 @@ ul {
   margin: 0;
 }
 body {
-  background-color: #f3f3f3;
+  background: #0b111f;
 }
 .footer {
   position: fixed;
@@ -10,8 +10,6 @@ body {
   left: 0;
   right: 0;
   color: #fff;
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
 }
 
 .footer img {
@@ -201,8 +199,6 @@ h6 {
 
 .nav-color {
   color: #fff;
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
 }
 
 .nav-link {
@@ -230,8 +226,7 @@ h6 {
   top: 0;
 }
 .area {
-  background: #4e54c8c5;
-  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+  background: #0b111f;
   width: 100%;
   height: 100vh;
 }
