--- a/trangchu.css
+++ b/trangchu.css
@@ -1,15 +1,7 @@
 ul {
   margin: 0;
 }
-body {
-  background-color: #f3f3f3;
-  /* background-image: url("./img/background.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-position: center;
-  background-size: cover;
-  color: #fff !important; */
-}
+
 .footer {
   position: fixed;
   left: 0;
@@ -17,8 +9,7 @@ body {
   bottom: 0;
   color: #fff;
 
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
+  background: #0b111f;
 }
 
 .footer img {
@@ -77,8 +68,7 @@ body {
 
 .nav-color {
   color: #fff;
-  background-color: #7f5a83 !important;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%) !important;
+  background: #0b111f;
 }
 .nav-link {
   padding-left: 1.5rem !important;
