--- a/trangchu.css
+++ b/trangchu.css
@@ -114,3 +114,15 @@ p {
   min-width: 100%;
   min-height: 100%;
 }
+
+.work {
+  background-color: #eec0c6;
+  background-image: linear-gradient(315deg, #eec0c6 0%, #7ee8fa 74%);
+}
+
+.text {
+  text-transform: uppercase;
+  background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
